refactor(database): 重构数据库实体和同步脚本
- 移除实体类中的@Enumerated注解，使用字符串存储枚举值
- 添加applications表同步功能，增加teaser_id、created_at、updated_at列
- 在investment_analyses表中添加score和recommendation列
- 扩大notifications表中notification_type列的长度至50字符
- 更新Favorite实体继承BaseEntity并修改字段为groupName和note
- 修复JWT认证过滤器中权限设置问题
- 优化通知类型转换器使用code字段进行匹配
- 为隐私设置实体添加JsonIgnore注解隐藏用户关联
- 修复应用服务中项目获取的懒加载问题
- 为多个只读查询方法添加事务注解提升性能
- 重构收藏服务实现分组功能和相关字段更新
- 优化测试数据脚本简化初始化流程并修复数据插入逻辑